force-app/main/default/objects/Job_Application__c/fields/Expected_salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_salary__c</fullName>
    <label>Expected salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>