force-app/main/default/objects/Job_Application__c/fields/Interview_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Interview_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Email Sent</label>
    <type>Checkbox</type>
</CustomField>