force-app/main/default/objects/Job_Application__c/fields/Offer_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Offer_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Email Sent</label>
    <type>Checkbox</type>
</CustomField>