force-app/main/default/objects/Job_Application__c/fields/Queue_Processed__c.field-meta.xml
<CustomField>
    <fullName>Queue_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queue Processed</label>
    <type>Checkbox</type>
</CustomField>