force-app/main/default/objects/Job_Application__c/recordTypes/Experienced_Application.recordType-meta.xml
<RecordType>
    <fullName>Experienced_Application</fullName>
    <active>true</active>
    <label>Experienced Application</label>
</RecordType>