force-app/main/default/objects/Job_Application__c/recordTypes/Fresher_Application.recordType-meta.xml
<RecordType>
    <fullName>Fresher_Application</fullName>
    <active>true</active>
    <label>Fresher Application</label>
</RecordType>