force-app/main/default/objects/Job_Application__c/validationRules/Expected_Salary_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Salary_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Offered&quot;),
ISBLANK(Expected_salary__c)
)</errorConditionFormula>
    <errorMessage>Expected Salary is required when status is Offered.</errorMessage>
</ValidationRule>