force-app/main/default/objects/Job_Application__c/validationRules/Interview_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Interview_Date_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Interview_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Interview date cannot be in the past.</errorMessage>
</ValidationRule>