force-app/main/default/objects/Job_Application__c/validationRules/Interview_Date_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>Interview_Date_REQUIRED</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c, &quot;Interviewing&quot;),
 ISBLANK(Interview_Date__c)
)</errorConditionFormula>
    <errorMessage>Interview Date is required when status is Interviewing</errorMessage>
</ValidationRule>