force-app/main/default/objects/Job_Application__c/validationRules/Offer_Requires_Salary_And_Interview.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Requires_Salary_And_Interview</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Offered&quot;) &amp;&amp;
(
ISBLANK(Expected_salary__c) ||
ISBLANK(Interview_Date__c)
)</errorConditionFormula>
    <errorMessage>Expected Salary and Interview Date are required when Status is Offered.</errorMessage>
</ValidationRule>