force-app/main/default/objects/Job_Application__c/validationRules/Position_Required_When_Interviewing.validationRule-meta.xml
<ValidationRule>
    <fullName>Position_Required_When_Interviewing</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&quot;Interviewing&quot;) &amp;&amp; ISBLANK(Position__c)</errorConditionFormula>
    <errorMessage>Position is required when applicant is interviewing.</errorMessage>
</ValidationRule>