force-app/main/default/objects/Job_Application__c/validationRules/Positive_Salary.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Salary</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_salary__c &lt;= 0</errorConditionFormula>
    <errorMessage>Salary must be greater than zero.</errorMessage>
</ValidationRule>