force-app/main/default/objects/Job_Application__c/validationRules/Salary_limitation_for_Freshers.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_limitation_for_Freshers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $RecordType.Name = &quot;Fresher Application&quot;,
 Expected_salary__c &gt; 50000
)</errorConditionFormula>
    <errorMessage>Fresher expected salary cannot exceed 50,000 per month</errorMessage>
</ValidationRule>