force-app/main/default/objects/Job_Application__c/validationRules/Salary_Required_For_Experienced.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Required_For_Experienced</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = &quot;Experienced Application&quot; &amp;&amp;
ISBLANK(Expected_salary__c)</errorConditionFormula>
    <errorMessage>Salary is required for Experienced Application</errorMessage>
</ValidationRule>