force-app/main/default/objects/Job_Application__c/listViews/Overdue_Interviews.listView-meta.xml
<ListView>
    <fullName>Overdue_Interviews</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Interview_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Interviewing</value>
    </filters>
    <label>Overdue Interviews</label>
</ListView>