force-app/main/default/objects/Job_Application__c/listViews/Today_s_Interviews.listView-meta.xml
<ListView>
    <fullName>Today_s_Interviews</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Interview_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Interviews</label>
</ListView>